--- a/css/styles_products.css
+++ b/css/styles_products.css
@@ -116,8 +116,8 @@ a {
 
 .drop:hover .dropdown, .drop:focus .dropdown {
     position: absolute;
-     top: 4.1rem;
-     left:0;
+    top: 4.1rem;
+    left:0;
     display: flex;
     flex-direction: column;
 }
@@ -147,7 +147,7 @@ li:hover, li:focus {
 
 .category li {
     padding: 1rem;
-    width: 6rem;
+    width: 20vw;
     margin-bottom: 1rem;
 }
 
@@ -158,8 +158,18 @@ section {
     color: #fff7ee;
 }
 
+main {
+    width: 100%;
+    grid-row: 4;
+}
+
+main h2 {
+    justify-self: center;
+}
+
 .seller-card {
-    width: 80vw;
+    width: 80%;
+    justify-self: center;
     box-shadow: 2px 2px 4px gray;
     text-align: center;
     padding: 1rem;
@@ -178,10 +188,6 @@ section {
 
 .seller-card h3 {
     margin-top: 0;
-}
-
-main {
-    grid-row: 4;
 }
 
 footer {
@@ -233,8 +239,8 @@ footer {
 
     .drop:hover .dropdown, .drop:focus .dropdown {
     position: absolute;
-     top: 4.1rem;
-     left:0;
+    top: 4.1rem;
+    left:0;
     display: flex;
     flex-direction: column;
     }
@@ -244,6 +250,15 @@ footer {
         padding: 0.5rem;
     }
 
+    /*Card alteration*/
+    main {
+        width: 100%;
+    }
+
+    .seller-card {
+        width: 80%;
+        justify-self: center
+    }
     /* Footer alteration */
     .sub-footer {
         grid-template-columns: 1fr 4fr;
